--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "sass-mediaqueries": "^1.6.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "particles.js": "^2.0.0"
   }
 }
